--- a/dashboard.html
+++ b/dashboard.html
@@ -67,11 +67,13 @@ header {
   margin: 30px auto;
 }
 #logoutBtn:hover { background-color: #b71c1c; }
+#instituteLogo { max-height: 60px; display: block; margin: 0 auto 10px; border-radius: 6px; }
 </style>
 </head>
 <body>
 
 <header id="dashboardHeader">👋 مرحباً بك في لوحة التحكم</header>
+<img id="instituteLogo" src="" alt="شعار المعهد" />
 
 <div class="container">
   <div class="card" id="studentsCard"><h3>📚 إدارة الطلاب</h3></div>
@@ -87,6 +89,7 @@ header {
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
 // 🔹 Firebase Config
 const firebaseConfig = {
@@ -101,11 +104,10 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
+const db = getFirestore(app);
 
-// ✅ منع الدخول إلا بعد تسجيل الدخول
-onAuthStateChanged(auth, (user) => {
-  if (!user) window.location.href = "institute-login.html";
-});
+const dashboardHeader = document.getElementById("dashboardHeader");
+const instituteLogoEl = document.getElementById("instituteLogo");
 
 // 🔘 التنقل بين الصفحات
 const pageLinks = {
@@ -119,26 +121,78 @@ const pageLinks = {
 
 Object.keys(pageLinks).forEach(id => {
   const el = document.getElementById(id);
-  if (el) el.addEventListener("click", () => window.location.href = pageLinks[id]);
+  if(el) el.addEventListener("click", ()=> window.location.href = pageLinks[id]);
 });
 
-// 🔒 زر تسجيل الخروج
-document.getElementById("logoutBtn").addEventListener("click", async () => {
+// 🔒 تسجيل الخروج
+document.getElementById("logoutBtn").addEventListener("click", async ()=>{
   await signOut(auth);
-  alert("تم تسجيل الخروج بنجاح");
   window.location.href = "login.html";
 });
 
-// 🎨 تطبيق ألوان المعهد من localStorage
-const colors = JSON.parse(localStorage.getItem("instituteColors") || "{}");
-if(colors.primary) document.documentElement.style.setProperty('--primary', colors.primary);
-if(colors.bg) document.documentElement.style.setProperty('--bg', colors.bg);
-if(colors.card) document.documentElement.style.setProperty('--card', colors.card);
-if(colors.accent) document.documentElement.style.setProperty('--accent', colors.accent);
+// ✅ التحقق من المستخدم وتحميل بيانات المعهد
+onAuthStateChanged(auth, async user => {
+  if(!user){
+    window.location.href = "login.html";
+    return;
+  }
 
-// تغيير اسم المعهد في الهيدر
-const instituteName = localStorage.getItem("instituteName") || "لوحة التحكم";
-document.getElementById("dashboardHeader").textContent = `👋 مرحباً بك في ${instituteName}`;
+  try{
+    // جلب بيانات المستخدم من users collection
+    const userDoc = await getDoc(doc(db, "users", user.uid));
+    if(!userDoc.exists()){
+      alert("لم يتم العثور على بيانات المستخدم.");
+      await signOut(auth);
+      window.location.href = "login.html";
+      return;
+    }
+
+    const userData = userDoc.data();
+    const instituteId = userData.instituteId;
+    if(!instituteId){
+      alert("لم يتم ربط المستخدم بأي معهد.");
+      await signOut(auth);
+      window.location.href = "login.html";
+      return;
+    }
+
+    // جلب بيانات المعهد
+    const instituteDoc = await getDoc(doc(db, "institutes", instituteId));
+    if(!instituteDoc.exists()){
+      alert("المعهد غير موجود.");
+      await signOut(auth);
+      window.location.href = "login.html";
+      return;
+    }
+
+    const inst = instituteDoc.data();
+
+    // تطبيق الألوان
+    if(inst.colors){
+      if(inst.colors.primary) document.documentElement.style.setProperty('--primary', inst.colors.primary);
+      if(inst.colors.bg) document.documentElement.style.setProperty('--bg', inst.colors.bg);
+      if(inst.colors.card) document.documentElement.style.setProperty('--card', inst.colors.card);
+      if(inst.colors.accent) document.documentElement.style.setProperty('--accent', inst.colors.accent);
+    }
+
+    // اسم المعهد
+    dashboardHeader.textContent = `👋 مرحباً بك في ${inst.name || "لوحة التحكم"}`;
+
+    // شعار المعهد
+    if(inst.logoUrl){
+      instituteLogoEl.src = inst.logoUrl;
+      instituteLogoEl.style.display = "block";
+    } else {
+      instituteLogoEl.style.display = "none";
+    }
+
+  }catch(err){
+    console.error(err);
+    alert("حدث خطأ أثناء جلب بيانات المعهد: " + err.message);
+    await signOut(auth);
+    window.location.href = "login.html";
+  }
+});
 </script>
 
 </body>
